# gotify-handler

./: README.md  pyproject.toml
gotify_handler/: __init__.py  gotify_handler.py
