[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gotify_handler"
authors = [{name = "Scott Conway", email = "me@conway.scot"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version", "description"]
dependencies = [
    "requests >=2.6"
]
[project.urls]
Home = "https://github.com/scottmconway/gotify-handler"
